--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,53 @@
+/* CUSTOM PROPS */
+:root{
+  --text-color:#22343D;
+  --header-bg:#fff;
+  --light-bg:#E5E5E5;
+}
+
+
+
+/* FONTS */
+@font-face {
+  font-family: "Poppins";
+  src: url("..fonts/Poppins-SemiBold.woff2") format("woff2"),
+      url("..fonts/Poppins-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("..fonts/Poppins-Regular.woff2") format("woff2"),
+      url("..fonts/Poppins-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("..fonts/Poppins-Bold.woff2") format("woff2"),
+      url("..fonts/Poppins-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("..fonts/Poppins-Medium.woff2") format("woff2"),
+      url("..fonts/Poppins-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+
+
+/* GLOBAL */
 html{
   box-sizing: border-box;
   height: 100%;
@@ -15,11 +65,11 @@ body{
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "Arial",sans-serif;
+  font-family:"Poppins","Arial",sans-serif;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 28px;
   background-color: #fff;
-  color: #222;
+  color: var(--text-color);
 }
 
 img{
