--- a/css/styles.css
+++ b/css/styles.css
@@ -477,8 +477,13 @@ img{
   margin-top: 0;
 }
 
-.managment__content-bottom--text {
-  margin-bottom:0;
+.managment__content-bottom--text{
+  margin-bottom: 30px;
+  margin-top: 0;
+}
+
+.managment__content-bottom--text:not(:last-child){
+  margin-bottom: 0;
 }
 
 .managment-img{
@@ -496,7 +501,7 @@ img{
 .customer__container {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
 
 /* CUSTOMER-CONTENT */
@@ -525,7 +530,7 @@ img{
   display: flex;
   align-items: center;
 }
-.cusomer__info-img--wrapper {
+.customer__info-img--wrapper {
   width: 35px;
   height: 35px;
   display: flex;
@@ -534,6 +539,7 @@ img{
   justify-content: center;
   background-color: rgba(255, 0, 0, 0.333);
   margin-right: 30px;
+  /* object-fit: contain; */
 }
 
 .cusomer__info-img--wrapper--yellow{
@@ -546,6 +552,10 @@ img{
 
 .cusomer__info-img--wrapper--blue{
   background-color: #4D8DFF;
+}
+
+.customer__img-wrapper{
+  margin-right: 44px;
 }
 
 .cutomer__info-img {
@@ -672,6 +682,13 @@ img{
 
 
 /* MEDIA */
+
+@media only screen and (max-width:1130px) {
+  .customer__content{
+    width: 500px;
+  }
+}
+
 @media only screen and (max-width:990px) {
   /* SITE-HEADER */
   .site-header{
@@ -752,6 +769,30 @@ img{
     width: 450px;
     height: 500px;
   }
+  /* CUSTOMER */
+  .customer__container{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+
+  .customer__content{
+    width: 100%;
+  }
+
+  .cutomer__info{
+    width: 100%;
+  }
+  .customer__img-wrapper{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    object-fit: cover;
+  }
+
+  .customer__img{
+    text-align: center;
+  }
 }
 
 
@@ -830,7 +871,9 @@ img{
     justify-content: center;
     display: flex;
   }
-
+  
+  /* MANAGMENT */
+  
   .managment{
     padding-top: 50px;
   }
@@ -841,20 +884,34 @@ img{
     justify-content: center;
     flex-direction: column-reverse;
   }
-
-  .managment__img{
-    width: 534px;
-    height: auto;
-  }
-
+  
+  
   .managment__content{
     width: 100%;
   }
   .managment__contenet-top{
     margin-bottom: 40px;
   }
-
-
+  
+  .managment__img-wrapper{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 60px;  
+  }
+  
+  .managment__img{
+    width: 534px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    align-self: center;
+  }
+  
+  /* CUSTOMER */
+  .customer__img-wrapper{
+   margin-bottom: 40px;
+  }
+    
   
 }
 
@@ -888,6 +945,10 @@ img{
     font-size: 32px;
     line-height: normal;
   }
+  /* CUSTOMER */
+  .customer{
+    padding-top: 30px;
+  }
 }
 
 @media only screen and (max-width:519px){
@@ -915,6 +976,10 @@ img{
   }
   
   /* INDEX-FEATURES */
+  .index-features{
+    padding-bottom: 30px;
+  }
+
   .index-features__top{
     margin-bottom: 15px;
   }
@@ -922,6 +987,12 @@ img{
   .index-features__title{
     font-size: 24px;
   }
+
+  /* MANAGMENT */
+  .managment{
+    padding-top:0;
+  }
+
 }
 
 
@@ -969,9 +1040,6 @@ img{
     text-align: center;
   } 
 } 
-
-
-
 
 @media only screen and (max-width:990px){
   .process__info-container{
